--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,22 @@
 [versions]
-junit = { strictly = '5.12.0' }
-nva = { strictly = '2.2.4' }
-zalando = { strictly = '0.27.1' }
-awsLambdaJavaCore = { strictly = '1.2.3' }
-awsLambdaEvents = { strictly = '3.15.0' }
-log4j = { strictly = '2.24.3' }
-slf4j = { require = '2.0.17' }
-awsSdk2 = { strictly = '2.31.28' }
+awsLambdaCore = { strictly = '1.3.0' }
+awsLambdaEvents = { strictly = '3.16.0' }
+awsSdk2 = { strictly = '2.31.77' }
+guava = { strictly = '33.4.8-jre' }
+jackson = { strictly = '2.19.1' }
 jena = { require = '5.4.0' }
-jackson = { require = '2.18.3' }
-guava = { require = '33.4.8-jre' }
-mockito = { strictly = '5.15.2' }
+jupiter = { strictly = '5.13.3' }
+log4j = { strictly = '2.25.0' }
+mockito = { strictly = '5.18.0' }
+nva = { strictly = '2.2.9' }
+slf4j = { strictly = '2.0.17' }
+zalandoProblem = { strictly = '0.27.1' }
 
 
 [libraries]
-junit-jupiter-api = { group = 'org.junit.jupiter', name = 'junit-jupiter-api', version.ref = 'junit' }
-junit-jupiter-params = { group = 'org.junit.jupiter', name = 'junit-jupiter-params', version.ref = 'junit' }
-junit-jupiter-engine = { group = 'org.junit.jupiter', name = 'junit-jupiter-engine', version.ref = 'junit' }
+junit-jupiter-api = { group = 'org.junit.jupiter', name = 'junit-jupiter-api', version.ref = 'jupiter' }
+junit-jupiter-params = { group = 'org.junit.jupiter', name = 'junit-jupiter-params', version.ref = 'jupiter' }
+junit-jupiter-engine = { group = 'org.junit.jupiter', name = 'junit-jupiter-engine', version.ref = 'jupiter' }
 
 nva-testutils = { group = 'com.github.bibsysdev', name = 'nvatestutils', version.ref = 'nva' }
 nva-logutils = { group = 'com.github.bibsysdev', name = 'logutils', version.ref = 'nva' }
@@ -40,7 +40,7 @@ aws-sdk2-urlconnection = { group = 'software.amazon.awssdk', name = 'url-connect
 aws-sdk2-secrets = { group = 'software.amazon.awssdk', name = 'secretsmanager', version.ref = 'awsSdk2' }
 aws-sdk2-apache-client = { group = 'software.amazon.awssdk', name = 'apache-client', version.ref = 'awsSdk2' }
 
-aws-lambda-java-core = { group = 'com.amazonaws', name = 'aws-lambda-java-core', version.ref = 'awsLambdaJavaCore' }
+aws-lambda-java-core = { group = 'com.amazonaws', name = 'aws-lambda-java-core', version.ref = 'awsLambdaCore' }
 aws-lambda-events = { group = 'com.amazonaws', name = 'aws-lambda-java-events', version.ref = 'awsLambdaEvents' }
 
 log4j-core = { group = 'org.apache.logging.log4j', name = 'log4j-core', version.ref = 'log4j' }
@@ -54,7 +54,7 @@ jena-arq = { group = 'org.apache.jena', name = 'jena-arq', version.ref = 'jena' 
 jena-fuseki = { group = 'org.apache.jena', name = 'jena-fuseki-main', version.ref = 'jena' }
 jena-rdfconnection = { group = 'org.apache.jena', name = 'jena-rdfconnection', version.ref = 'jena' }
 
-zalando = { group = 'org.zalando', name = 'problem', version.ref = 'zalando' }
+zalando = { group = 'org.zalando', name = 'problem', version.ref = 'zalandoProblem' }
 
 guava = { group = 'com.google.guava', name = 'guava', version.ref = 'guava' }
 
